kubernetes/qsb/apps/downloads/aria2/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aria2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: aria2
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/instance: nginx-internal
      ports:
        - port: &port 8080
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - port: *port
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - port: *port
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sccarr
      ports:
        - port: *port
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: 8989
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: 7878
              protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
